wp-content/themes/blaszok-child/style.css
/* ... */
.flex-active-slide{
	border: 1px solid #eee;
}
.woocommerce-page.single-product #mpcth_page_wrap #mpcth_content > .product .summary .woocommerce-product-rating + .woocommerce-breadcrumb{
	float: left;
	width: 100%;
}
#mpcth_page_wrap .woocommerce .mpcth-sale-wrap:before, .woocommerce-page #mpcth_page_wrap .mpcth-sale-wrap:before{
	top: -.4em;
}
#mpcth_page_wrap .woocommerce .mpcth-sale-wrap:before, .woocommerce-page #mpcth_page_wrap .mpcth-sale-wrap:after{
	right: -.4em;
}
.mpcth-product-content .mpcth-vc-row-wrap{
	width: 100% !important;
}
#mpcth_page_wrap .woocommerce .products .product, .woocommerce #mpcth_page_wrap .products .product{
	width: 25%;
}
/*custom*/

/*style_custom.css file code starts*/

body
		{ font-size: 13px; }

#mpcth_page_wrap #mpcth_sidebar a:hover,#mpcth_page_wrap #mpcth_footer a:hover,a
		{ color: #ed1b24; }

#mpcth_page_wrap .mpcth-color-main-color,#mpcth_page_wrap .mpcth-color-main-color-hover:hover
		{ color: #ed1b24; }

#mpcth_page_wrap .mpcth-color-main-background,#mpcth_page_wrap .mpcth-color-main-background-hover:hover
		{ background-color: #ed1b24; }

#mpcth_page_wrap .mpcth-color-main-border,#mpcth_page_wrap .mpcth-color-main-border-hover:hover
		{ border-color: #ed1b24 !important; }
/* ... */

